# automata

./: README.md  setup.cfg
automata/: Automata.py  __main__.py
automata/loader/: ModuleLoader.py  OracleModuleLoader.py
simulations/predict/: __init__.py
simulations/runprofile/: __init__.py
tests/automata/: Automata_test.py
