[metadata]
name = persuader-technology-automata
version = 0.0.1
description = Automata
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.1.1

[options.packages.find]
include = automata*
exclude =
    tests
    simulations
    .scripts
